--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </ul>
             </div>
         </section>
-        <section id="formulario" class="secao_formulario">
+        <section id="formulario" class="secao_formulario" data-formulario>
             <h1>ADICIONAR PRODUTO:</h1>
             <div class="formulario_campo">
                 <input name="nome" class="campo_escrita" required placeholder="nome..." id='url' data-nome/>
@@ -55,6 +55,6 @@
         <p class="conteudo_rodape_fim">ALURA LATAM 2024</P>
     </footer>
 
-    <script src="./script.js"></script>
+    <script src="./js/mostrarProdutos.js" type="module"></script>
 </body>
 </html>
