--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraGeek</title>
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -22,23 +23,25 @@
                 </ul>
             </div>
         </section>
-        <section id="formulario" class="secao_formulario" data-formulario>
+        <section id="formulario" class="secao_formulario">
             <h1>ADICIONAR PRODUTO:</h1>
-            <div class="formulario_campo">
-                <input name="nome" class="campo_escrita" required placeholder="nome..." id='url' data-nome/>
-            </div>
+            <form class="formulario" data-formulario>
+                <div class="formulario_campo">
+                    <input name="nome" class="campo_escrita" required placeholder="nome..." id='url' data-nome/>
+                </div>
 
-            <div class="formulario_campo">
-                <input name="valor" class="campo_escrita" required placeholder="valor..." id='valor' data-valor/>
-            </div>
+                <div class="formulario_campo">
+                    <input name="valor" class="campo_escrita" required placeholder="valor..." id='valor' data-valor/>
+                </div>
 
-            <div class="formulario_campo">
-                <input name="imagem" class="campo_escrita" required placeholder="imagem..." id='imagem' data-imagem/>
-            </div>
-            <div class="botoes_container">
-                <button id="botao_guardar" type="submit" class="botao guardar">Guardar</button>
-                <button id="botao_limpar" class="botao limpar">Limpar</button>
-            </div>
+                <div class="formulario_campo">
+                    <input name="imagem" class="campo_escrita" required placeholder="imagem..." id='imagem' data-imagem/>
+                </div>
+                <div class="botoes_container">
+                    <button id="botao_guardar" type="submit" class="botao guardar">Guardar</button>
+                    <button id="botao_limpar" type="reset" class="botao limpar">Limpar</button>
+                </div>
+            </form>
         </section>
     </main>
     <footer class="rodape">
