--- a/index.html
+++ b/index.html
@@ -59,5 +59,7 @@
     </footer>
 
     <script src="./js/mostrarProdutos.js" type="module"></script>
+    <script src="./js/criarProduto.js" type="module"></script>
+    <script src="./js/apagaProduto.js" type="module"></script>
 </body>
 </html>
